# metal.rs

./: .gitignore  Cargo.toml  README.md  publish.sh
crates/metal/: Cargo.toml
crates/metal-foundation/: Cargo.toml
crates/metal-foundation/src/: array.rs  autorelease.rs  bundle.rs  data.rs  date.rs  dictionary.rs  enumerator.rs  error.rs  lib.rs  lock.rs  notification.rs  number.rs  objc_runtime.rs  object.rs  process_info.rs  set.rs  shared_ptr.rs  string.rs  types.rs  url.rs
crates/metal-fx/: Cargo.toml
crates/metal-fx/src/: enums.rs  frame_interpolator.rs  lib.rs  spatial_scaler.rs  temporal_denoised_scaler.rs  temporal_scaler.rs
crates/metal-sys/: Cargo.toml
crates/metal-sys/src/: block.rs  functions.rs  lib.rs  macros.rs  msg_send.rs  runtime.rs
crates/metal/examples/: 01_device_info.rs  02_buffer_compute.rs  03_render_triangle.rs  04_blit_operations.rs  05_async_completion.rs  06_mtl4_intro.rs  07_mtl4_compiler.rs  08_mtl4_machine_learning.rs  09_mtl4_compute.rs  10_mtl4_argument_table.rs
crates/metal/src/: allocation.rs  argument_descriptor.rs  binary_archive.rs  command_buffer_encoder_info.rs  drawable.rs  error.rs  function_log.rs  function_stitching.rs  lib.rs  log_state.rs  residency_set.rs  resource.rs  tensor.rs  texture_view_pool.rs
crates/metal/src/acceleration/: curve.rs  descriptors.rs  encoder.rs  instance.rs  motion_keyframe.rs  pass.rs  structure.rs
crates/metal/src/argument/: argument.rs  array_type.rs  binding.rs  buffer_binding.rs  encoder.rs  mod.rs  object_payload_binding.rs  pointer_type.rs  struct_member.rs  struct_type.rs  tensor_binding.rs  tensor_reference_type.rs  texture_binding.rs  texture_reference_type.rs  threadgroup_binding.rs  type_info.rs
crates/metal/src/buffer/: mod.rs
crates/metal/src/capture/: mod.rs
crates/metal/src/command_buffer/: mod.rs
crates/metal/src/command_queue/: mod.rs
crates/metal/src/counter/: mod.rs
crates/metal/src/depth_stencil/: mod.rs
crates/metal/src/device/: acceleration.rs  architecture.rs  binary_archive.rs  buffer.rs  command_queue.rs  creation.rs  depth_stencil.rs  events.rs  features.rs  heap.rs  indirect.rs  io.rs  library.rs  limits.rs  mod.rs  mtl4.rs  pipeline.rs  properties.rs  residency_set.rs  sampler.rs  texture.rs
crates/metal/src/encoder/: blit_encoder.rs  mod.rs  parallel_render_encoder.rs  resource_state_encoder.rs
crates/metal/src/enums/: acceleration.rs  argument.rs  blit.rs  capture.rs  command.rs  counter.rs  data_type.rs  depth_stencil.rs  device.rs  function.rs  heap.rs  indirect_command.rs  io.rs  library.rs  log.rs  mod.rs  pipeline.rs  pixel_format.rs  render.rs  resource.rs  sampler.rs  tensor.rs  texture.rs  vertex.rs
crates/metal/src/function_table/: mod.rs
crates/metal/src/heap/: mod.rs
crates/metal/src/indirect/: buffer.rs  buffer_descriptor.rs  compute_command.rs  mod.rs  render_command.rs
crates/metal/src/io/: command_buffer.rs  command_queue.rs  command_queue_descriptor.rs  file_handle.rs  mod.rs  scratch_buffer.rs  scratch_buffer_allocator.rs
crates/metal/src/mtl4/: archive.rs  argument_table.rs  binary_function.rs  command_allocator.rs  command_buffer.rs  command_encoder.rs  command_queue.rs  commit_feedback.rs  compiler_task.rs  compute_command_encoder.rs  compute_pipeline.rs  counters.rs  enums.rs  function_descriptor.rs  library_descriptor.rs  library_function_descriptor.rs  linking_descriptor.rs  machine_learning.rs  mesh_render_pipeline.rs  mod.rs  pipeline_data_set_serializer.rs  pipeline_state.rs  render_command_encoder.rs  render_pass.rs  render_pipeline.rs  specialized_function_descriptor.rs  stitched_function_descriptor.rs  tile_render_pipeline.rs
crates/metal/src/pass/: attachment.rs  blit_pass.rs  blit_sample_buffer.rs  color_attachment.rs  compute_pass.rs  compute_sample_buffer.rs  depth_attachment.rs  render_pass.rs  render_sample_buffer.rs  resource_state.rs  stencil_attachment.rs
crates/metal/src/pipeline/: buffer_descriptor.rs  color_attachment.rs  compute_descriptor.rs  compute_state.rs  functions_descriptor.rs  mesh_pipeline.rs  mod.rs  reflection.rs  render_descriptor.rs  render_state.rs  tile_pipeline.rs
crates/metal/src/rasterization_rate/: mod.rs
crates/metal/src/sampler/: mod.rs
crates/metal/src/stage_input_output/: mod.rs
crates/metal/src/sync/: mod.rs
crates/metal/src/texture/: descriptor.rs  (+4 more)
crates/metal/tests/: abi_validation.rs  error_paths.rs  integration_blit.rs  integration_buffer.rs  integration_compute.rs  integration_render.rs  integration_texture.rs  memory_safety.rs  selector_validation.rs
crates/mtl/: Cargo.toml
crates/mtl-foundation/: Cargo.toml
crates/mtl-foundation/src/: array.rs  autorelease.rs  bundle.rs  data.rs  date.rs  dictionary.rs  enumerator.rs  error.rs  lock.rs  notification.rs  number.rs  object.rs  process_info.rs  range.rs  set.rs  shared_ptr.rs  string.rs  types.rs  url.rs
crates/mtl-fx/: Cargo.toml
crates/mtl-fx/src/: enums.rs  frame_interpolator.rs  lib.rs  spatial_scaler.rs  temporal_denoised_scaler.rs  temporal_scaler.rs
crates/mtl-quartz-core/: Cargo.toml
crates/mtl-quartz-core/src/: lib.rs  metal_drawable.rs  metal_layer.rs  types.rs
crates/mtl-sys/: Cargo.toml
crates/mtl-sys/src/: functions.rs  lib.rs  macros.rs  msg_send.rs  runtime.rs
crates/mtl/examples/: 01_device_info.rs  02_buffer_compute.rs  03_render_triangle.rs  04_blit_operations.rs  05_async_completion.rs  06_mtl4_intro.rs  07_mtl4_compiler.rs  08_mtl4_machine_learning.rs  09_mtl4_compute.rs  10_mtl4_argument_table.rs
crates/mtl/src/: allocation.rs  argument_descriptor.rs  binary_archive.rs  command_buffer_encoder_info.rs  drawable.rs  error.rs  function_log.rs  function_stitching.rs  lib.rs  log_state.rs  residency_set.rs  resource.rs  tensor.rs  texture_view_pool.rs
crates/mtl/tests/: abi_validation.rs  error_paths.rs  integration_blit.rs  integration_buffer.rs  integration_compute.rs  integration_render.rs  integration_texture.rs  memory_safety.rs  selector_validation.rs
crates/quartz-core/: Cargo.toml
crates/quartz-core/src/: lib.rs  metal_drawable.rs  metal_layer.rs
(+230 files in other folders)
