[workspace]
resolver = "2"
members = [
    "crates/mtl-sys",
    "crates/mtl-foundation",
    "crates/mtl",
    "crates/mtl-fx",
    "crates/mtl-quartz-core",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Jason Herald <jason.herald@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jasonherald/metal.rs"
documentation = "https://jasonherald.github.io/metal.rs/mtl/"
rust-version = "1.85"
keywords = ["metal", "gpu", "graphics", "apple", "macos"]
categories = ["api-bindings", "rendering", "graphics"]

[workspace.dependencies]
mtl-sys = { path = "crates/mtl-sys", version = "1.0.0" }
mtl-foundation = { path = "crates/mtl-foundation", version = "1.0.0" }
mtl = { path = "crates/mtl", version = "1.0.0" }
mtl-fx = { path = "crates/mtl-fx", version = "1.0.0" }
mtl-quartz-core = { path = "crates/mtl-quartz-core", version = "1.0.0" }

[profile.release]
lto = true
codegen-units = 1
