[package]
name = "metal"
description = "Rust bindings to Apple's Metal framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
metal-sys.workspace = true
metal-foundation.workspace = true

[dev-dependencies]

[features]
default = []

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
