[package]
name = "mtl-sys"
description = "Low-level Objective-C runtime bindings for Metal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
# Zero external dependencies

[dev-dependencies]
