[package]
name = "mtl-gpu"
description = "Rust bindings to Apple's Metal framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
mtl-sys.workspace = true
mtl-foundation.workspace = true

[dev-dependencies]

[features]
default = []

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
